Moved input to env file

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
-LOG = False
+# Used universally for all scripts
+LOG = True
+IMAGE_PATH = /path/to/image.png
+
+# Used for image_convert.py
+CONVERT_TYPE = png
+
+# Used for image_resize.py
+IMAGE_DIRECTORY = /path/to/image/directory
+RESIZE_WIDTH = 100
+RESIZE_HEIGHT = 100
