Initialized image_resize.py

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ IMAGE_PATH = /path/to/image.png
 CONVERT_TYPE = png
 
 # Used for image_resize.py
+# Leave IMAGE_DIRECTORY empty if you only want to resize one image
 IMAGE_DIRECTORY = /path/to/image/directory
 RESIZE_WIDTH = 100
 RESIZE_HEIGHT = 100
